FIX z-index modal filters

--- a/projects/test-library/src/app/components/revenues-list/collections-list.component.css
+++ b/projects/test-library/src/app/components/revenues-list/collections-list.component.css
@@ -182,6 +182,12 @@ app-paginator {
     display: none;
   }
 
+  ::ng-deep app-list-filters-revenue {
+  position: fixed;
+  z-index: 1100 !important; /*Mayor que filters-card(1001) para que se vea*/
+  inset: 0;
+  }
+
   /* Fondo oscuro (overlay) detrás del panel */
   .filters-overlay {
     position: fixed;
